--- a/templates/notification.hbs
+++ b/templates/notification.hbs
@@ -2,6 +2,11 @@
   <card data-accent-color="tempo-bg-color--blue"
     data-icon-src="https://is3-ssl.mzstatic.com/image/thumb/Purple123/v4/e9/f5/7e/e9f57ed3-458c-22a0-1117-e53cc34f3a45/AppIcon-0-1x_U007emarketing-0-0-GLES2_U002c0-512MB-sRGB-0-0-0-85-220-0-0-0-6.png/246x0w.jpg">
     <header>
+      {{#if message.title}}
+      <h2>{{message.title}}</h2>
+      <hr />
+      {{/if}}
+
       <div>
         {{#if message.key}}
         <a class="tempo-text-color--link" href="{{message.keyLink}}">{{message.key}}</a>
