changed template var names

--- a/templates/notification.hbs
+++ b/templates/notification.hbs
@@ -49,7 +49,7 @@
           {{/if}}
         </div>
 
-        {{#if message.statusBar}}
+        {{#if message.showStatusBar}}
         <hr />
         <div>
           {{#if message.type}}
