style(templates): added new symphony Icons style(templates): removed text escape for template enrichment

--- a/templates/notification.hbs
+++ b/templates/notification.hbs
@@ -1,14 +1,14 @@
 <div>
   {{#if message.alert}}
   <card data-accent-color="tempo-bg-color--red"
-    data-icon-src="https://is3-ssl.mzstatic.com/image/thumb/Purple123/v4/e9/f5/7e/e9f57ed3-458c-22a0-1117-e53cc34f3a45/AppIcon-0-1x_U007emarketing-0-0-GLES2_U002c0-512MB-sRGB-0-0-0-85-220-0-0-0-6.png/246x0w.jpg">
+    data-icon-src="https://symphony.com/wp-content/uploads/2019/08/favicon.png">
     {{else}}
     <card data-accent-color="tempo-bg-color--blue"
-      data-icon-src="https://is3-ssl.mzstatic.com/image/thumb/Purple123/v4/e9/f5/7e/e9f57ed3-458c-22a0-1117-e53cc34f3a45/AppIcon-0-1x_U007emarketing-0-0-GLES2_U002c0-512MB-sRGB-0-0-0-85-220-0-0-0-6.png/246x0w.jpg">
+      data-icon-src="https://symphony.com/wp-content/uploads/2019/08/favicon.png">
       {{/if}}
       <header>
         {{#if message.title}}
-        <h2>{{message.title}}</h2>
+        <h2>{{{message.title}}}</h2>
         <hr />
         {{/if}}
 
@@ -17,15 +17,15 @@
           {{#if message.content.header}}
           <card data-accent-color="tempo-bg-color--background">
             <header>
-              {{message.content.header}}
+              {{{message.content.header}}}
             </header>
 
             <body>
-              {{message.content.body}}
+              {{{message.content.body}}}
             </body>
           </card>
           {{else}}
-          <span class="tempo-text-color--normal">{{message.content}}</span>
+          <span class="tempo-text-color--normal">{{{message.content}}}</span>
           {{/if}}
           {{/if}}
         </div>
@@ -35,7 +35,7 @@
           <div>
             <span class="tempo-text-color--secondary">Comments:</span>
             <br />
-            <span class="tempo-text-color--normal">{{message.comment.body}}</span>
+            <span class="tempo-text-color--normal">{{{message.comment.body}}}</span>
             <br />
           </div>
           {{/if}}
@@ -43,13 +43,13 @@
           <div>
             {{#if message.description}}
             <span class="tempo-text-color--secondary">Description:</span>
-            <span class="tempo-text-color--normal">{{message.description}}</span>
+            <span class="tempo-text-color--normal">{{{message.description}}}</span>
             {{/if}}
 
             {{#if message.assignee}}
             <br />
             <span class="tempo-text-color--secondary">Assignee:</span>
-            <span class="tempo-text-color--normal">{{message.assignee.displayName}}</span>
+            <span class="tempo-text-color--normal">{{{message.assignee.displayName}}}</span>
             {{/if}}
           </div>
 
@@ -58,12 +58,12 @@
           <div>
             {{#if message.type}}
             <span class="tempo-text-color--secondary">Type:</span>
-            <span class="tempo-text-color--normal" style="margin-right:24px">{{message.type.name}}</span>
+            <span class="tempo-text-color--normal" style="margin-right:24px">{{{message.type.name}}}</span>
             {{/if}}
 
             {{#if message.priority}}
             <span class="tempo-text-color--secondary">Priority:</span>
-            <span class="tempo-text-color--normal" style="margin-right:24px">{{message.priority.name}}</span>
+            <span class="tempo-text-color--normal" style="margin-right:24px">{{{message.priority.name}}}</span>
             {{/if}}
 
             {{#if message.status}}
@@ -74,14 +74,14 @@
               <span class="tempo-bg-color--green tempo-text-color--white tempo-token" style="margin-right:24px">
                 {{/if}}
 
-                {{message.status.name}}
+                {{{message.status.name}}}
               </span>
               {{/if}}
 
               {{#if message.labels}}
               <span class="tempo-text-color--secondary">Labels:</span>
               {{#each message.labels}}
-              <span class="hashTag" style="margin-right:24px">{{this.text}}</span>
+              <span class="hashTag" style="margin-right:24px">{{{this.text}}}</span>
               {{/each}}
               {{/if}}
           </div>
