--- a/templates/table.hbs
+++ b/templates/table.hbs
@@ -10,7 +10,7 @@
     {{#each message}}
     <tr>
       {{#each this}}
-      <td>{{this}}</td>
+      <td>{{{this}}}</td>
       {{/each}}
     </tr>
     {{/each}}
