--- a/templates/rfq-card.hbs
+++ b/templates/rfq-card.hbs
@@ -10,7 +10,7 @@
         border: 1px solid #E0E0E0;"
     >
         <p style="font-size:12px;margin: 0;">RFQ</p>
-        <p style="font-size: 16px;margin: 0;"><b>{{asset}}</b></p>
+        <p style="font-size: 16px;margin: 0;"><b>{{message.asset}}</b></p>
     </div>
     <div style="display: flex;
         flex-wrap: wrap;
@@ -22,7 +22,10 @@
         padding: 5px;
         border-left: none;"
     >
-        {{#> body}}
-        {{/body}}
+         {{#> overrideBody}}
+           {{#if message.asset}}
+             {{message.asset}}
+           {{/if}}
+        {{/overrideBody}}
     </div>
 </div>
