--- a/templates/table.hbs
+++ b/templates/table.hbs
@@ -1,20 +1,20 @@
 {{#> information}}
   {{#*inline "overrideHeader"}}
-    <table style="margin: 0">
+   <table>
       <thead>
         <tr>
-            {{#each message.headers}}
-              <th><b><span style="font-size: 16px; padding: 0">{{{this}}}</span></b></th>
-            {{/each}}
+          {{#each message.[0]}}
+          <th>{{@key}}</th>
+          {{/each}}
         </tr>
       </thead>
       <tbody>
-        {{#each message.rows}}
-          <tr>
-            {{#each this}}
-              <td style="padding: 2px 0 0 0; font-size: 14px;">{{{this}}}</td>
-            {{/each}}
-          </tr>
+        {{#each message}}
+        <tr>
+          {{#each this}}
+          <td>{{this}}</td>
+          {{/each}}
+        </tr>
         {{/each}}
       </tbody>
     </table>
