--- a/templates/rfq/rfq-card.hbs
+++ b/templates/rfq/rfq-card.hbs
@@ -4,13 +4,12 @@
         flex-direction: column;
         justify-content: center;
         align-items:center;
-        background-color: purple;
+        background-color: {{rfqColor message.colorIndex}};
         border-radius: 4px 0px 0px 4px;
         padding: 5px 10px;
-        border: 1px solid #E0E0E0;"
-    >
+        border: 1px solid #E0E0E0;">
         <p style="font-size:12px;margin: 0;">RFQ</p>
-        <p style="font-size: 16px;margin: 0;"><b>{{message.asset}}</b></p>
+        <p style="font-size: 16px;margin: 0;"><b>{{message.shortCode}}</b></p>
     </div>
     <div style="display: flex;
         flex-wrap: wrap;
@@ -20,11 +19,10 @@
         border-top-right-radius: 4px;
         border-bottom-right-radius: 4px;
         padding: 5px;
-        border-left: none;"
-    >
+        border-left: none;">
          {{#> overrideBody}}
-           {{#if message.asset}}
-             {{message.asset}}
+           {{#if message.shortCode}}
+             {{message.shortCode}}
            {{/if}}
         {{/overrideBody}}
     </div>
