--- a/templates/simple.hbs
+++ b/templates/simple.hbs
@@ -1,5 +1,5 @@
 <div>
-  <card data-accent-color="tempo-bg-color--green"
+  <card data-accent-color="tempo-bg-color--dodgerblue"
     data-icon-src="https://symphony-app-icon.s3.amazonaws.com/favicon.png">
     {{#if message.title}}
     <header>
