--- a/templates/list.hbs
+++ b/templates/list.hbs
@@ -1,5 +1,5 @@
 <div>
-  <card data-accent-color="tempo-bg-color--gray"
+  <card data-accent-color="tempo-bg-color--dodgerblue"
     data-icon-src="https://symphony-app-icon.s3.amazonaws.com/favicon.png">
     <header>
       {{#if message.title}}
