--- a/templates/list.hbs
+++ b/templates/list.hbs
@@ -1,9 +1,10 @@
 <div>
-  <card data-accent-color="tempo-bg-color--dodgerblue"
+  <card data-accent-color="tempo-bg-color--blue"
     data-icon-src="https://symphony-app-icon.s3.amazonaws.com/favicon.png">
     <header>
       {{#if message.title}}
       {{message.title}}
+      <br/>
       <br/>
       {{/if}}
 
